force-app/main/default/objects/Fee_Waiver__c/Fee_Waiver__c.object-meta.xml
<CustomObject>
    <label>Fee Waiver</label>
    <nameField>
        <label>Fee Waiver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Waivers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>