force-app/main/default/objects/Fee_Waiver__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The case where the fee waiver request originated.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Fee Waivers</relationshipLabel>
    <relationshipName>Fee_Waivers</relationshipName>
    <type>Lookup</type>
</CustomField>