force-app/main/default/objects/Fee_Waiver__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>Date fee waiver was requested</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>