force-app/main/default/objects/Fee_Waiver__c/fields/Department_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Department_Responsible__c</fullName>
    <inlineHelpText>Which department caused the client to request a fee waiver?</inlineHelpText>
    <label>Department Responsible</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting &amp; Finance</fullName>
            </value>
            <value>
                <fullName>Client Experience</fullName>
            </value>
            <value>
                <fullName>Client Onboarding</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Reconciliations &amp; Withdrawals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>