force-app/main/default/objects/Fee_Waiver__c/fields/Fee_Waiver_Status__c.field-meta.xml
<CustomField>
    <fullName>Fee_Waiver_Status__c</fullName>
    <inlineHelpText>What is the status of the fee waiver</inlineHelpText>
    <label>Fee Waiver Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Awaiting Approval</fullName>
            </value>
            <value>
                <fullName>Approval Granted</fullName>
            </value>
            <value>
                <fullName>Approval Denied</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>