force-app/main/default/objects/Fee_Waiver__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Please any important notes, mitigating factors, and steps we are taking to prevent the issue from happening again.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>