force-app/main/default/objects/Fee_Waiver__c/fields/Reason_for_Fee_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Fee_Waiver__c</fullName>
    <inlineHelpText>What is the reason behind the fee waiver request?</inlineHelpText>
    <label>Reason for Fee Waiver</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Time Exception (customer service)</fullName>
            </value>
            <value>
                <fullName>System Error</fullName>
            </value>
            <value>
                <fullName>Ubiquity Error</fullName>
            </value>
            <value>
                <fullName>Adjustment Waiver</fullName>
            </value>
            <value>
                <fullName>Fee Waiver or Refund</fullName>
            </value>
            <value>
                <fullName>Save Offer</fullName>
            </value>
            <value>
                <fullName>No Start</fullName>
            </value>
            <value>
                <fullName>One-Time Waiver</fullName>
                <isActive>false</isActive>
                <label>One-Time Waiver</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>